Add update checking

--- a/release.json
+++ b/release.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1c",
+  "version": "0.0.1d",
   "description": "改進:\n- 新版本檢查\n- 較b版更少彈app\n\n以下功能未實現:\n- 回覆/發表貼文\n- 設定\n- 圖片下載(打包)\n- PM\n- 私人訊息\n- 轉台圖示\n- 新版本提示等其他功能",
   "url": "https://raw.githubusercontent.com/Saren-Arterius/datHKG-Issues/master/packages/release_0_0_1c.apk",
   "pubdate": "2015-04-10",
