--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "0.0.2c",
-  "description": "- 修正少量問題\n(部份機型睇post回覆會痴埋一齊，搵緊點解)\n\n以下功能仍未實現:\n- 回覆/發表貼文\n- 設定\n- 圖片下載(打包)\n- PM\n- 私人訊息\n- 其他未列出的功能",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.2c/release_0_0_2c.apk",
-  "pubdate": "2015-04-12",
+  "version": "0.0.2d",
+  "description": "- 嘗試解決記憶體不足問題\n\n以下功能仍未實現:\n- 回覆/發表貼文\n- 設定\n- 圖片下載(打包)\n- PM\n- 私人訊息\n- 其他未列出的功能",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.2d/release_0_0_2d.apk",
+  "pubdate": "2015-04-13",
   "force": true
 } 
