--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "0.0.2e",
-  "description": "- 少量FC改進\n\n以下功能仍未實現:\n- 回覆/發表貼文\n- 設定\n- 圖片下載(打包)\n- PM\n- 私人訊息\n- 其他未列出的功能",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.2e/release_0_0_2e.apk",
-  "pubdate": "2015-04-13",
+  "version": "0.0.2f",
+  "description": "- 私家錯誤回報功能\n- 改善煩人「記憶體不足」\n- Fragment:getResources:619 <- 唔知想點\n(同埋記得得閒介紹datHKG比朋友仔知)\n(但係唔好去高登開post講，因為admin好小氣)\n\n以下功能仍未實現:\n- 回覆/發表貼文\n- 設定\n- 圖片下載(打包)\n- PM\n- 私人訊息\n- 其他未列出的功能",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.2f/release_0_0_2f.apk",
+  "pubdate": "2015-04-14左右",
   "force": true
 } 
