--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.6f",
-  "description": "- 新回覆/PM檢查間隔設為0 = 真正完全關閉服務\n- 加入PM list錯誤訊息方便日後debug",
+  "description": "(睇唔到PM既人請盡快down呢個ver)\n- 新回覆/PM檢查間隔設為0 = 真正完全關閉服務\n- 加入PM list錯誤訊息方便日後debug",
   "url": "https://dl.dropboxusercontent.com/u/22107397/app-release.apk",
   "pubdate": "2015-07-18",
   "force": false,
