--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.6h",
-  "description": "(睇唔到pm既人請down呢個ver)\n- PM list fix",
+  "version": "0.0.6k",
+  "description": "- 加入次要API伺服器\n- 設定: 回覆/發表/PM成功時不顯示通知",
   "url": "https://dl.dropboxusercontent.com/u/22107397/app-release.apk",
-  "pubdate": "2015-07-19",
+  "pubdate": "2015-07-25",
   "force": false,
   "next_check_seconds": 86400
 }
