--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.6p",
+  "version": "0.0.6o",
   "description": "[強制更新]\ndatHKG因某些原因而從Google Play下架。\n\n為過渡往新的APK，此版本必需被安裝。\n\n安裝程式後若有疑問，請到Facebook專頁查詢。\n\n不便之處，敬請見諒。",
   "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.6p/datHKG-release.apk",
   "pubdate": "2015-07-30",
-  "force": true,
+  "force": false,
   "next_check_seconds": 86400
 }
