--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.7b",
   "description": "- (移除廣告問題) a版蠢左sor",
-  "url": "https://play.google.com/store/apps/details?id=net.wtako.dathkg_reborn",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.7b/datHKG-release.apk",
   "pubdate": "2015-07-31",
   "force": false,
   "next_check_seconds": 86400
