--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.8d",
-  "description": "- 自訂顏色主題",
+  "description": "(較穩定版本)\n- 自訂顏色主題",
   "url": "https://play.google.com/store/apps/details?id=net.wtako.dathkg_reborn",
   "pubdate": "2015-08-10",
   "force": false,
