--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.8d",
-  "description": "(較穩定版本)\n- 自訂顏色主題",
-  "url": "https://play.google.com/store/apps/details?id=net.wtako.dathkg_reborn",
-  "pubdate": "2015-08-10",
+  "version": "0.0.8h",
+  "description": "請勿下載0.0.8g版本，將導致無限FC",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.8h/datHKG-release.apk",
+  "pubdate": "2015-08-25",
   "force": false,
   "next_check_seconds": 86400
 }
