--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.8k",
+  "version": "0.0.8l",
   "description": "自己睇",
   "url": "https://play.google.com/store/apps/details?id=net.wtako.dathkg_reborn",
-  "pubdate": "2015-09-04",
+  "pubdate": "2015-09-06",
   "force": false,
   "next_check_seconds": 86400
 }
