--- a/release.json
+++ b/release.json
@@ -1,7 +1,7 @@
 {
-  "version": "0.0.9d",
-  "description": "- 修正: 幾個FC問題\n- 改善: 圖片連結轉換功能\n- 其他小修正",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9d/datHKG-release.apk",
+  "version": "0.0.9e",
+  "description": "- 修正: 連結轉換功能\n- 改善: Better old API Icons repairing\n- 其他小修正",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9e/datHKG-release.apk",
   "pubdate": "2015-09-21",
   "force": false,
   "next_check_seconds": 10000
