--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.9e",
-  "description": "- 修正: 連結轉換功能\n- 改善: Better old API Icons repairing\n- 其他小修正",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9e/datHKG-release.apk",
-  "pubdate": "2015-09-21",
+  "version": "0.0.9f",
+  "description": "- 修正: 幾個FC問題",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9f/datHKG-release.apk",
+  "pubdate": "2015-09-22",
   "force": false,
   "next_check_seconds": 10000
 }
