--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.9g",
-  "description": "- 修正: 按圖片大小載入圖片功能\n- 修正: 少量FC\n- 其他小修正\n(強制更新，吹咩^3^)",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9g/datHKG-release.apk",
+  "version": "0.0.9h",
+  "description": "- 增加: 圖片載入失敗debug功能(有機會在下一版fix部份用家不能載入圖片的問題)",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9h/datHKG-release.apk",
   "pubdate": "2015-09-23",
-  "force": true,
+  "force": false,
   "next_check_seconds": 10000
 }
