--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.9k",
-  "description": "- 修正: 少量FC問題\n- 其他小修正",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9k/datHKG-release.apk",
-  "pubdate": "2015-09-27",
+  "version": "0.0.9l",
+  "description": "- 修正: 少量FC問題\n- 其他小修正\n(琴日掛完玩奧燒bb，冇update，唔好意思)",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9l/datHKG-release.apk",
+  "pubdate": "2015-09-29",
   "force": false,
   "next_check_seconds": 43200
 }
