--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.9l",
-  "description": "- 修正: 少量FC問題\n- 其他小修正\n(琴日掛完玩奧燒bb，冇update，唔好意思)",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9l/datHKG-release.apk",
-  "pubdate": "2015-09-29",
+  "version": "0.0.9m",
+  "description": "- 修正: 少量FC問題\n- 更換package名\n(幾日後將強制更新，請自行過渡)",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9m/datHKG-release.apk",
+  "pubdate": "2015-10-01",
   "force": false,
   "next_check_seconds": 10000
 }
