--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.9m",
-  "description": "- 修正: 少量FC問題\n- 更換package名\n(幾日後將強制更新，請自行過渡)",
+  "description": "- 修正: 少量FC問題\n- 更換package名\n(幾日後將強制更新，請自行過渡)\n\n若更新後持續出現更新提示，姐係你用緊舊版(呢個版本)。唔該del左舊版佢，但唔好del錯新版",
   "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9m/datHKG-release.apk",
   "pubdate": "2015-10-01",
   "force": false,
