--- a/release-reborn2.json
+++ b/release-reborn2.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.9g",
-  "description": "- 修正: 按圖片大小載入圖片功能\n- 修正: 少量FC\n- 其他小修正\n(強制更新，吹咩^3^)",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9g/datHKG-release.apk",
-  "pubdate": "2015-09-23",
-  "force": true,
+  "version": "0.0.9n",
+  "description": "- 修正: 一個可怕的錯誤(n)\n- 修正: 少量FC問題\n- 更換package名\n(幾日後將強制更新，請自行過渡)\n\n若更新後持續出現更新提示，姐係你用緊舊版(呢個版本)。唔該del左舊版佢，但唔好del錯新版",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9n/datHKG-release.apk",
+  "pubdate": "2015-10-01",
+  "force": false,
   "next_check_seconds": 10000
 }
