--- a/release-reborn2.json
+++ b/release-reborn2.json
@@ -1,7 +1,7 @@
 {
-  "version": "0.0.9o",
-  "description": "- 新增: 以電郵和帳單號碼來回復廣告購買\n(因此新增一個所需權限)\n- 修正: 少量FC問題\n- 其他小修正",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9o/datHKG-release.apk",
+  "version": "0.0.9p",
+  "description": "- 修正: link",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9p/datHKG-release.apk",
   "pubdate": "2015-10-09",
   "force": false,
   "next_check_seconds": 10000
