--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.9p",
-  "description": "你開錯左舊版呀呀呀呀呀",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9p/datHKG-release.apk",
-  "pubdate": "2015-10-01",
+  "version": "0.0.9q",
+  "description": "你開錯左舊版呀呀呀呀呀，信我啦",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9q/datHKG-release.apk",
+  "pubdate": "2015-10-11",
   "force": true,
   "next_check_seconds": 10000
 }
