--- a/release.json
+++ b/release.json
@@ -1,8 +1,8 @@
 {
-  "version": "0.0.9r",
+  "version": "6.6.6",
   "description": "你開錯左舊版呀呀呀呀呀，信我啦",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9r/datHKG-release.apk",
-  "pubdate": "2015-10-12",
+  "url": "https://dathkg.wtako.net/",
+  "pubdate": "6666-66-66",
   "force": true,
   "next_check_seconds": 10000
 }
