--- a/release-reborn2.json
+++ b/release-reborn2.json
@@ -1,7 +1,7 @@
 {
-  "version": "0.0.9r",
-  "description": "- 改善: 程式運作速度\n- 改善: (可能)減少食電\n- 但..新增: 各種bugs\n- (r) 修正: 小圈子過濾\n- (r) 新增: beta版更新系統 (減少頻繁更新)",
-  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9r/datHKG-release.apk",
+  "version": "0.0.9s",
+  "description": "- 改善: 程式運作速度\n- 改善: (可能)減少食電\n- (r) 修正: 小圈子過濾\n- (r) 新增: beta版更新系統 (減少頻繁更新)\n- (s) 修正: FCs",
+  "url": "https://github.com/Saren-Arterius/datHKG/releases/download/0.0.9s/datHKG-release.apk",
   "pubdate": "2015-10-12",
   "next_check_seconds": 10000,
   "force": false
