--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
   "version": "6.6.6",
-  "description": "你開錯左舊版呀呀呀呀呀，信我啦\n但6.6.6版係假既，不過4600年之後，datHKG都未必有6.6.6版(笑)",
+  "description": "喂你肯update未呀？,
   "url": "https://dathkg.wtako.net/",
   "pubdate": "6666-66-66",
   "force": true,
