--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
   "version": "6.6.6",
-  "description": "喂你肯update未呀？,
+  "description": "喂你肯update未呀？",
   "url": "https://dathkg.wtako.net/",
   "pubdate": "6666-66-66",
   "force": true,
